Include app.js with route configs. --skip-ci for codeship

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <ul class="nav nav-pills">
       <li role="presentation"><a href="/">Home</a></li>
-      <li role="presentation"><a href="partials/sf-public-art.html">SF Public Art</a></li>
+      <li role="presentation"><a href="/sf-public-art">SF Public Art</a></li>
       <li role="presentation"><a href="partials/"></a></li>
     </ul>
 
@@ -25,10 +25,10 @@
 
     <div ng-app="jsonApp">
 
-
     </div>
 
   </body>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/app.js"></script>
 </html>
