--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="bower_components/angular/angular.min.js"></script>
-    <script src="bower_components/angular-route/angular-route.min.js"></script>
   </head>
   <body>
 
@@ -23,7 +22,9 @@
       Demo using Angular to get json-formatted data.  Additional data sets are available at <a href="https://data.sfgov.org/">SF OpenData</a>.
     </p>
 
-    <div ng-app="jsonApp">
+    <div ng-app="jsonApp" ng-controller="jsonDataCtrl">
+
+      <ng-outlet></ng-outlet>
 
     </div>
 
